# volleyball-coaching-bible

./: .gitignore  .mcp.json  CLAUDE.md  CUsersSongMudocumentsclaudecodevbabibleexisting-urls.txt  existing-urls.txt
.github/workflows/: deploy-webapp.yml  deploy.yml
Munciana Drills/: .deferred
raw/: INDEX.md
raw/books/: notes-beal-coaching-writings.md  notes-bernardinho-2006-transformando-suor-em-ouro.md  notes-bernardinho-volei-aprendendo-jogar.md  notes-velasco-generosita.md  (+18 more)
tools/: install-hooks.sh  lint.py  test_lint.py  transcribe.py
tools/aoc-mcp/: .gitignore  README.md  pyproject.toml
tools/aoc-mcp/aoc_mcp/: __init__.py  auth.py  catalog.py  client.py  config.py  discover.py  errors.py  extract.py  models.py  search.py  server.py  video.py
tools/aoc-mcp/tests/: test_auth.py  test_catalog.py  test_client.py  test_errors.py  test_extract.py  test_search.py  test_video.py
tools/aoc-mcp/tests/fixtures/: authenticated-article-response.html  live-article-kiraly-4-keys-forearm-pass.html  live-category-passing-drills.html  live-search-karch.html  login-redirect-response.html
webapp/: astro.config.mjs  package-lock.json  package.json
wiki/: SCHEMA.md  age-lens-14u.md  age-lens-college.md  age-lens-hs.md  blocking.md  cues.md  defense.md  hitting.md  index.md  lint-report.md  lint-report.md.baseline  log.md  match-prep.md  mental-skills-curriculum.md  mental.md  passing.md  philosophy.md  physical.md  practice-planning.md  practice-ratios.md  recruiting.md  rules.md  season-planning.md  serving.md  setting.md  systems.md  transition.md  unsourced-queue.md
(+1276 files in other folders)
