[project]
name = "aoc-mcp"
version = "0.1.0"
description = "MCP server for Art of Coaching Volleyball (paid-member access)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "markdownify>=0.11",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
aoc-auth = "aoc_mcp.auth:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aoc_mcp*"]
